refactor: fixed warnings on ignored variables